Add Incident API - POST incident action (with Swagger)
